z-index of footer changed to 9 to stop overlap of other elements when scrolling

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -256,6 +256,7 @@ caption p {
   bottom: 0;
   width: 100%;   
   margin-top: auto;
+  z-index:9; /* Applied so that footer cannot be overlapped by other elements */
 }
 
 .copyright {
